src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) const char* opencv5sharp_getLastError();
extern "C" __declspec(dllexport) int opencv5sharp_getLastErrorCode();
extern "C" __declspec(dllexport) void opencv5sharp_clearLastError();
extern "C" __declspec(dllexport) void cv_FreeString(char* ptr);
extern "C" __declspec(dllexport) void cv_VectorInt_Delete(void* ptr);
extern "C" __declspec(dllexport) int cv_VectorInt_Size(void* ptr);
extern "C" __declspec(dllexport) void cv_VectorInt_GetData(void* ptr, int* outBuf);
extern "C" __declspec(dllexport) void* cv_VectorInt_New(int* data, int size);
extern "C" __declspec(dllexport) void cv_VectorMat_Delete(void* ptr);
extern "C" __declspec(dllexport) int cv_VectorMat_Size(void* ptr);
extern "C" __declspec(dllexport) void* cv_VectorMat_GetElement(void* ptr, int index);
extern "C" __declspec(dllexport) void* cv_VectorMat_New(void** mats, int size);
extern "C" __declspec(dllexport) void Algorithm_Delete(void* self);
extern "C" __declspec(dllexport) void Algorithm_clear_0(void* self);
extern "C" __declspec(dllexport) void Algorithm_write_0(void* self, void* fs);
extern "C" __declspec(dllexport) void Algorithm_write_1(void* self, void* fs, const char* name);
extern "C" __declspec(dllexport) void Algorithm_read_0(void* self, void* fn);
extern "C" __declspec(dllexport) bool Algorithm_empty_0(void* self);
extern "C" __declspec(dllexport) void Algorithm_save_0(void* self, const char* filename);
extern "C" __declspec(dllexport) const char* Algorithm_getDefaultName_0(void* self);
extern "C" __declspec(dllexport) void AsyncArray_Delete(void* self);
extern "C" __declspec(dllexport) void* AsyncArray_New_0();
extern "C" __declspec(dllexport) void AsyncArray_release_0(void* self);
extern "C" __declspec(dllexport) void AsyncArray_get_0(void* self, void* dst);
extern "C" __declspec(dllexport) bool AsyncArray_get_1(void* self, void* dst, double timeoutNs);
extern "C" __declspec(dllexport) bool AsyncArray_wait_for_0(void* self, double timeoutNs);
extern "C" __declspec(dllexport) bool AsyncArray_valid_0(void* self);
extern "C" __declspec(dllexport) void DMatch_Delete(void* self);
extern "C" __declspec(dllexport) void* DMatch_New_0();
extern "C" __declspec(dllexport) void* DMatch_New_1(int _queryIdx, int _trainIdx, float _distance);
extern "C" __declspec(dllexport) void* DMatch_New_2(int _queryIdx, int _trainIdx, int _imgIdx, float _distance);
extern "C" __declspec(dllexport) int DMatch_queryIdx_get(void* self);
extern "C" __declspec(dllexport) void DMatch_queryIdx_set(void* self, int val);
extern "C" __declspec(dllexport) int DMatch_trainIdx_get(void* self);
extern "C" __declspec(dllexport) void DMatch_trainIdx_set(void* self, int val);
extern "C" __declspec(dllexport) int DMatch_imgIdx_get(void* self);
extern "C" __declspec(dllexport) void DMatch_imgIdx_set(void* self, int val);
extern "C" __declspec(dllexport) float DMatch_distance_get(void* self);
extern "C" __declspec(dllexport) void DMatch_distance_set(void* self, float val);
extern "C" __declspec(dllexport) void FileNode_Delete(void* self);
extern "C" __declspec(dllexport) void* FileNode_New_0();
extern "C" __declspec(dllexport) void* FileNode_operator_get_0(void* self, const char* nodename);
extern "C" __declspec(dllexport) void* FileNode_operator_get_1(void* self, int i);
extern "C" __declspec(dllexport) void* FileNode_keys_0(void* self);
extern "C" __declspec(dllexport) int FileNode_type_0(void* self);
extern "C" __declspec(dllexport) bool FileNode_empty_0(void* self);
extern "C" __declspec(dllexport) bool FileNode_isNone_0(void* self);
extern "C" __declspec(dllexport) bool FileNode_isSeq_0(void* self);
extern "C" __declspec(dllexport) bool FileNode_isMap_0(void* self);
extern "C" __declspec(dllexport) bool FileNode_isInt_0(void* self);
extern "C" __declspec(dllexport) bool FileNode_isReal_0(void* self);
extern "C" __declspec(dllexport) bool FileNode_isString_0(void* self);
extern "C" __declspec(dllexport) bool FileNode_isNamed_0(void* self);
extern "C" __declspec(dllexport) const char* FileNode_name_0(void* self);
extern "C" __declspec(dllexport) size_t FileNode_size_0(void* self);
extern "C" __declspec(dllexport) size_t FileNode_rawSize_0(void* self);
extern "C" __declspec(dllexport) double FileNode_real_0(void* self);
extern "C" __declspec(dllexport) const char* FileNode_string_0(void* self);
extern "C" __declspec(dllexport) void* FileNode_mat_0(void* self);
extern "C" __declspec(dllexport) void FileStorage_Delete(void* self);
extern "C" __declspec(dllexport) void* FileStorage_New_0();
extern "C" __declspec(dllexport) void* FileStorage_New_1(const char* filename, int flags, const char* encoding);
extern "C" __declspec(dllexport) bool FileStorage_open_0(void* self, const char* filename, int flags, const char* encoding);
extern "C" __declspec(dllexport) bool FileStorage_isOpened_0(void* self);
extern "C" __declspec(dllexport) void FileStorage_release_0(void* self);
extern "C" __declspec(dllexport) const char* FileStorage_releaseAndGetString_0(void* self);